[metadata]
name = masnet
version = attr:masnet.__version__
url = https://github.com/metebalci/masnet
author = Mete Balci
author_email = metebalci@gmail.com
license = GPLv3
description = tools for Mastodon network analysis
long_description_content_type = text/markdown
keywords = Mastodon
classifiers = 
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Information Analysis
  Topic :: Scientific/Engineering :: Visualization
  Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = masnet
install_requires = 
  networkit == 10.0
  pandas == 1.5.2

[options.entry_points]
console_scripts = 
  masnet.download=masnet.download:main
  masnet.generate=masnet.generate:main
  masnet.analyze=masnet.analyze:main
